day3-4 note